# IntuitiveFeedback4Force

./: README.md
example/: CMakeLists.txt  main.cpp
readForces_cppCode/: force_sensors.cpp  force_sensors.hpp
